--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -7,7 +7,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        py-version: [3.7, 3.8, 3.9]    
+        py-version: [3.7, 3.8, 3.9]   
+        exclude:
+          - os: macos-latest
+            version: 3.9
     runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Python
